--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- DESCRIPTION -->
 
 
-         <h4> Human Resources And Administration Manager
+         <h4> #
 
 
 
@@ -82,7 +82,7 @@
         <!-- SMS NUMBER -->
 
 
-        <a href="sms:91+ 7718082086
+        <a href="sms:+(713) 400-4952
         ">  <img src="./sms.jpg" alt=""></a>
         <p>SMS</p>
     </div>
@@ -120,7 +120,7 @@
 
         <!-- LOCATION -->
 
-        <a href="https://maps.app.goo.gl/BDkB4Qv5Vz9R7jwk7
+        <a href="#
         ">
             <img src="./location.jpg" alt=""></a>
         <p>Location</p>
@@ -129,7 +129,7 @@
 
 
         <!-- SAVE CONTACT -->
-        <a href="https://vcard.link/card/DmLt.vcf">  <img src="./save contact.jpg" alt=""></a>
+        <a href="https://vcard.link/card/DdJT.vcf">  <img src="./save contact.jpg" alt=""></a>
         <p>SAVE<br/>CONTACT</p>
     </div>
 
@@ -183,7 +183,7 @@
 
 
 
-        <a href="https://api.whatsapp.com/send?phone=(713) 806-7502
+        <a href="https://api.whatsapp.com/send?phone=+(713)806-7502
         ">
             <img src="./01.jpg" alt=""></a>
        
