--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <!-- WORK -->
 
 
-            <h3> V.P Global Sales | V&A Group
+            <h3>   V&A Group
 
 
 
@@ -50,7 +50,7 @@
             <!-- DESCRIPTION -->
 
 
-         <h4> #
+         <h4> V.P Global Sales
 
 
 
